--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2>hi <span>,</span> i am <br> browny <br> star <span>.</span>   </h2>
-							<p>ui/ux designer and web developer</p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<h2>hi <span>,</span> i am <br> Manish <br> Chhetri <span>.</span>   </h2>
+							<p>Microservice Backend Developer</p>
+							<a href="assets/download/resume.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
