--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="single-about-add-info">
                       <h3>website</h3>
                       <p>
-                        <a href="www.nabarajsubedi.com.np"
+                        <a href="https://www.nabarajsubedi.com.np"
                           >www.nabarajsubedi.com.np</a
                         >
                       </p>
