--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
             </div>
             <div class="header-text">
               <h2>Nabaraj Subedi</h2>
-              <p>Aspiring Machine Learning and Deep learning Engineer</p>
+              <p> Machine Learning  Engineer</p>
 
-              <a href="./assets/download/resume.pdf" target="blank"
+              <a href="./assets/download/resume.pdf_" target="blank"
                 ><b><i class="fa fa-file-pdf-o"></i> </b>Resume</a
               >
 
